[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-storage-blob>=12.26.0",
    "beanie>=2.0.0",
    "boto3>=1.40.32",
    "colorlog>=6.9.0",
    "faker>=37.8.0",
    "fastapi-mail>=1.5.0",
    "fastapi[standard]>=0.116.2",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "punq>=0.7.0",
    "pydantic>=2.11.9",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.1.1",
    "starlette>=0.48.0",
    "streamlit>=1.49.1",
]
