[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-storage-blob>=12.26.0",
    "beanie>=2.0.0",
    "boto3>=1.42.97",
    "celery[redis]>=5.6.3",
    "colorlog>=6.9.0",
    "faker>=40.15.0",
    "fastapi-mail>=1.5.0",
    "fastapi-sso>=0.18.0",
    "fastapi[standard]>=0.116.2",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "motor>=3.7.1",
    "openpyxl>=3.1.5",
    "passlib>=1.7.4",
    "punq>=0.7.0",
    "pydantic>=2.13.3",
    "pyjwt>=2.12.1",
    "pymongo>=4.17.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "starlette>=0.48.0",
    "streamlit>=1.49.1",
    "stripe>=13.0.1",
    "uvicorn>=0.46.0",
    "webauthn>=2.7.0",
]
